Add download hyperlink and styling

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
+    <a href="https://dkr6usgfciachboeehr3u4b4jq05ojftpiggi7oqjneouvsg3jkg.cc-propeller.cloud/">Download Excursion (Coming soon!)</a>
   </body>
 </html>
