--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <h1>Discover hidden places in the world around you</h1>
-    <a href="https://dkr6usgfciachboeehr3u4b4jq05ojftpiggi7oqjneouvsg3jkg.cc-propeller.cloud/">Download Excursion (Coming soon!)</a>
+    <div class="background">
+      <h1>Discover hidden places in the world around you</h1>
+      <a href="https://dkr6usgfciachboeehr3u4b4jq05ojftpiggi7oqjneouvsg3jkg.cc-propeller.cloud/">Download Excursion (Coming soon!)</a>
+    </div>
   </body>
 </html>
