--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 
       <h1>Discover hidden places in the world around you</h1>
       <a href="https://dkr6usgfciachboeehr3u4b4jq05ojftpiggi7oqjneouvsg3jkg.cc-propeller.cloud/">Download Excursion (Coming soon!)</a>
-
+      <iframe src="./resources/videos/excursion.mp4"></iframe>
   </body>
 </html>
