--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
       <h1>Discover hidden places in the world around you</h1>
       <a href="https://dkr6usgfciachboeehr3u4b4jq05ojftpiggi7oqjneouvsg3jkg.cc-propeller.cloud/">Download Excursion (Coming soon!)</a>
-      <video><source src="./resources/videos/excursion.mp4" type="video/mp4">Your browser does not support HTML5 video.</video>
+
+      <div>
+        <video controls="false" autoplay="autoplay" loop><source src="./resources/videos/excursion.mp4" type="video/mp4">Your browser does not support HTML5 video.</video>
+      </div>
   </body>
 </html>
