--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
       <div>
         <video controls="false" autoplay="autoplay" loop><source src="./resources/videos/excursion.mp4" type="video/mp4">Your browser does not support HTML5 video.</video>
       </div>
+
+      <h2>Your personal travel guide</h2>
+      
   </body>
 </html>
