--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       </div>
 
       <h2>Your personal travel guide</h2>
-      
+      <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg" alt="Campsite at sunset" />
+      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png" alt="iPhone icon" />
   </body>
 </html>
