--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
       <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
       <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg" alt="Campsite at sunset" />
       <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png" alt="iPhone icon" />
+      <h2>Coming Soon for iPhone and Android</h2>
   </body>
 </html>
