--- a/index.html
+++ b/index.html
@@ -14,10 +14,16 @@
         <video controls="false" autoplay="autoplay" loop><source src="./resources/videos/excursion.mp4" type="video/mp4">Your browser does not support HTML5 video.</video>
       </div>
 
-      <h2>Your personal travel guide</h2>
-      <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
-      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg" alt="Campsite at sunset" />
-      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png" alt="iPhone icon" />
-      <h2>Coming Soon for iPhone and Android</h2>
+      <div>
+        <h2>Your personal travel guide</h2>
+        <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+        <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg" alt="Campsite at sunset" />
+      </div>
+
+      <div>
+        <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png" alt="iPhone icon" />
+        <h2>Coming Soon for iPhone and Android</h2>
+        <a href="https://dkr6usgfciachboeehr3u4b4jq05ojftpiggi7oqjneouvsg3jkg.cc-propeller.cloud/">Download Excursion (Coming soon!)</a>
+      </div>
   </body>
 </html>
