Add copyright section

--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
         <h2>Coming Soon for iPhone and Android</h2>
         <a href="https://dkr6usgfciachboeehr3u4b4jq05ojftpiggi7oqjneouvsg3jkg.cc-propeller.cloud/">Download Excursion (Coming soon!)</a>
       </div>
+      <p id="copyright">&copy Excursion<p>
   </body>
 </html>
