Close paragraph tag

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <a href="https://dkr6usgfciachboeehr3u4b4jq05ojftpiggi7oqjneouvsg3jkg.cc-propeller.cloud/">Download Excursion (Coming soon!)</a>
       </p>
 
-      <p id="copyright">&copy Excursion<p>
+      <p id="copyright">&copy Excursion</p>
 
   </body>
 </html>
