--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
 
       <h1>Discover hidden places in the world around you</h1>
-      <a href="https://dkr6usgfciachboeehr3u4b4jq05ojftpiggi7oqjneouvsg3jkg.cc-propeller.cloud/">Download Excursion (Coming soon!)</a>
+      <a href="#">Download Excursion (Coming soon!)</a>
 
       <p>
         <video controls="false" autoplay="autoplay" loop><source src="./resources/videos/excursion.mp4" type="video/mp4">Your browser does not support HTML5 video.</video>
@@ -23,7 +23,7 @@
       <p>
         <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png" alt="iPhone icon" />
         <h2>Coming Soon for iPhone and Android</h2>
-        <a href="https://dkr6usgfciachboeehr3u4b4jq05ojftpiggi7oqjneouvsg3jkg.cc-propeller.cloud/">Download Excursion (Coming soon!)</a>
+        <a href="#">Download Excursion (Coming soon!)</a>
       </p>
 
       <p id="copyright">&copy Excursion</p>
