Reviewed after looking at solutions

--- a/index.html
+++ b/index.html
@@ -7,26 +7,32 @@
   </head>
   <body>
 
+      <!-- Top Section -->
+
       <h1>Discover hidden places in the world around you</h1>
-      <a href="#">Download Excursion (Coming soon!)</a>
+      <p><a class="cta" href="#">Download Excursion (Coming soon!)</a></p>
+      <video autoplay muted loop>
+        <source src="./resources/videos/excursion.mp4" type="video/mp4">
+        Your browser does not support HTML5 video.
+      </video>
 
-      <p>
-        <video controls="false" autoplay="autoplay" loop><source src="./resources/videos/excursion.mp4" type="video/mp4">Your browser does not support HTML5 video.</video>
-      </p>
+      <!-- Information Section -->
 
-      <p>
-        <h2>Your personal travel guide</h2>
-        <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
-        <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg" alt="Campsite at sunset" />
-      </p>
+      <h2>Your personal travel guide</h2>
+      <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+      <p><img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg" alt="Campsite at sunset" /></p>
 
-      <p>
-        <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png" alt="iPhone icon" />
-        <h2>Coming Soon for iPhone and Android</h2>
-        <a href="#">Download Excursion (Coming soon!)</a>
-      </p>
+      <!-- Coming Soon Section -->
 
-      <p id="copyright">&copy Excursion</p>
+      <p><img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png" alt="iPhone icon" /></p>
+      <h2>Coming Soon for iPhone and Android</h2>
+      <p><a href="#">Download Excursion (Coming soon!)</a></p>
+
+      <!-- Footer -->
+
+      <div class="footer">
+        <p>&copy; Excursion</p>
+      </div>
 
   </body>
 </html>
