--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
       <p><img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png" alt="iPhone icon" /></p>
       <h2>Coming Soon for iPhone and Android</h2>
-      <p><a href="#">Download Excursion (Coming soon!)</a></p>
+      <p><a class="cta" href="#">Download Excursion (Coming soon!)</a></p>
 
       <!-- Footer -->
 
